{
  "version": 4,
  "terraform_version": "1.7.2",
  "serial": 370,
  "lineage": "34d2c78c-6483-4df7-aa7f-7254b4f7bed5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "terramino",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377327225:loadbalancer/app/learn-asg-terramino-lb/a9f0b5d7def4bbb3",
            "arn_suffix": "app/learn-asg-terramino-lb/a9f0b5d7def4bbb3",
            "dns_name": "learn-asg-terramino-lb-83620167.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377327225:loadbalancer/app/learn-asg-terramino-lb/a9f0b5d7def4bbb3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "learn-asg-terramino-lb",
            "security_groups": [
              "sg-05a8071350e69123e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03d748e1430ec38dc"
              },
              {
                "subnet_id": "subnet-086a42441911d1660"
              },
              {
                "subnet_id": "subnet-0f0984505b1645deb"
              }
            ],
            "subnets": [
              "subnet-03d748e1430ec38dc",
              "subnet-086a42441911d1660",
              "subnet-0f0984505b1645deb"
            ],
            "tags_all": {
              "hashicorp-learn": "aws-asg"
            },
            "vpc_id": "vpc-0116ba4666035afb8",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.terramino_lb",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "terramino",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377327225:listener/app/learn-asg-terramino-lb/a9f0b5d7def4bbb3/21a35f225fe85892",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:891377327225:targetgroup/learn-asg-terramino/d983712a3ce1ce54",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377327225:listener/app/learn-asg-terramino-lb/a9f0b5d7def4bbb3/21a35f225fe85892",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:891377327225:loadbalancer/app/learn-asg-terramino-lb/a9f0b5d7def4bbb3",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "hashicorp-learn": "aws-asg"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.terramino",
            "aws_lb_target_group.terramino",
            "aws_security_group.terramino_lb",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "terramino",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377327225:targetgroup/learn-asg-terramino/d983712a3ce1ce54",
            "arn_suffix": "targetgroup/learn-asg-terramino/d983712a3ce1ce54",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377327225:targetgroup/learn-asg-terramino/d983712a3ce1ce54",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "learn-asg-terramino",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "hashicorp-learn": "aws-asg"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0116ba4666035afb8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terramino_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377327225:security-group/sg-020730149fd4656bd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-020730149fd4656bd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05a8071350e69123e"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05a8071350e69123e"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "learn-asg-terramino-instance",
            "name_prefix": "",
            "owner_id": "891377327225",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "hashicorp-learn": "aws-asg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0116ba4666035afb8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.terramino_lb",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terramino_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377327225:security-group/sg-05a8071350e69123e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05a8071350e69123e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "learn-asg-terramino-lb",
            "name_prefix": "",
            "owner_id": "891377327225",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "hashicorp-learn": "aws-asg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0116ba4666035afb8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377327225:internet-gateway/igw-0b55c8ed8c7c0ba2b",
            "id": "igw-0b55c8ed8c7c0ba2b",
            "owner_id": "891377327225",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc",
              "hashicorp-learn": "aws-asg"
            },
            "vpc_id": "vpc-0116ba4666035afb8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b55c8ed8c7c0ba2b",
            "id": "r-rtb-0737607d48182af8c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0737607d48182af8c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377327225:route-table/rtb-0737607d48182af8c",
            "id": "rtb-0737607d48182af8c",
            "owner_id": "891377327225",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "main-vpc-public"
            },
            "tags_all": {
              "Name": "main-vpc-public",
              "hashicorp-learn": "aws-asg"
            },
            "vpc_id": "vpc-0116ba4666035afb8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072714598a687ec3e",
            "route_table_id": "rtb-0737607d48182af8c",
            "subnet_id": "subnet-086a42441911d1660"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad877e90f457b8c8",
            "route_table_id": "rtb-0737607d48182af8c",
            "subnet_id": "subnet-0f0984505b1645deb"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de743cba10d631e3",
            "route_table_id": "rtb-0737607d48182af8c",
            "subnet_id": "subnet-03d748e1430ec38dc"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377327225:subnet/subnet-086a42441911d1660",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-086a42441911d1660",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377327225",
            "tags": {
              "Name": "main-vpc-public-us-east-1a"
            },
            "tags_all": {
              "Name": "main-vpc-public-us-east-1a",
              "hashicorp-learn": "aws-asg"
            },
            "vpc_id": "vpc-0116ba4666035afb8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377327225:subnet/subnet-0f0984505b1645deb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0f0984505b1645deb",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377327225",
            "tags": {
              "Name": "main-vpc-public-us-east-1b"
            },
            "tags_all": {
              "Name": "main-vpc-public-us-east-1b",
              "hashicorp-learn": "aws-asg"
            },
            "vpc_id": "vpc-0116ba4666035afb8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377327225:subnet/subnet-03d748e1430ec38dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-03d748e1430ec38dc",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377327225",
            "tags": {
              "Name": "main-vpc-public-us-east-1c"
            },
            "tags_all": {
              "Name": "main-vpc-public-us-east-1c",
              "hashicorp-learn": "aws-asg"
            },
            "vpc_id": "vpc-0116ba4666035afb8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377327225:vpc/vpc-0116ba4666035afb8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09433dac62b623739",
            "default_route_table_id": "rtb-0f56e89e75b33dcf6",
            "default_security_group_id": "sg-0e8560218909acbe0",
            "dhcp_options_id": "dopt-071f33b664c7caa6c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0116ba4666035afb8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f56e89e75b33dcf6",
            "owner_id": "891377327225",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc",
              "hashicorp-learn": "aws-asg"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}